[gd_scene load_steps=5 format=3 uid="uid://c4u1eocxsqron"]

[ext_resource type="Script" uid="uid://dkkmvoxoq8axh" path="res://inventory/inventory_slot.gd" id="1_refl1"]
[ext_resource type="Texture2D" uid="uid://22bwmhxismdm" path="res://items/assets/Items/Treasure/Coin2.png" id="2_22dgf"]
[ext_resource type="Theme" uid="uid://ye5enk530pu7" path="res://gui/default_theme.tres" id="3_gjky6"]

[sub_resource type="AtlasTexture" id="AtlasTexture_7pjcw"]
atlas = ExtResource("2_22dgf")
region = Rect2(0, 0, 10, 10)

[node name="InventorySlot" type="Button"]
custom_minimum_size = Vector2(32, 32)
offset_right = 32.0
offset_bottom = 32.0
script = ExtResource("1_refl1")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 9.0
offset_top = 8.0
offset_right = 25.0
offset_bottom = 24.0
texture = SubResource("AtlasTexture_7pjcw")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 13.0
offset_top = 19.0
offset_right = 32.0
offset_bottom = 34.0
theme = ExtResource("3_gjky6")
text = "99"
horizontal_alignment = 2
vertical_alignment = 2

[connection signal="focus_entered" from="." to="." method="_on_item_focused"]
[connection signal="focus_exited" from="." to="." method="_on_item_unfocused"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
